TANGERINE-451 fixed z-index issue with homegrown drop menus
git-svn-id: svn://svn.orangeleap.com/tangerine/tangerine/trunk@5097 0f581344-5646-3a48-8ded-616bfea576c6

--- a/war/css/navigation.css
+++ b/war/css/navigation.css
@@ -56,6 +56,7 @@
 	/*height:57px;*/
 	height:33px;
 	/*padding-top:2px;*/
+    z-index: 20001;
 }
 #navmain ul {
 	margin: 0;
@@ -127,7 +128,7 @@
 	border-bottom: 1px solid #000;
 	border-left: 1px solid #000;
 	border-right: 1px solid #000;
-	z-index: 10;
+	z-index: 20001;
 	padding:2px;
 }
 #navmain ul.primaryNav li ul li {
